// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-react > renders the Button wrapper 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/button.yaml

import "@teseor/css/components/button.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { asElement, type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger";

type ButtonSize = "sm" | "md" | "lg";

type ButtonAs = "button" | "a";

type ButtonOwnProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ButtonAs;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Icon rendered before the label in the inline direction. Slot size scales with \`size\`. Accepts any node (icon component, SVG, etc.). */
  iconStart?: ReactNode;
  /** Icon rendered after the label in the inline direction. Accepts any node. */
  iconEnd?: ReactNode;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
  children?: ReactNode;
  ref?: Ref<HTMLElement>;
};

export type ButtonProps = Readonly<
  ButtonOwnProps & Omit<ComponentProps<"button">, keyof ButtonOwnProps>
>;

/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`tsx
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`tsx
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`tsx
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
export function Button(props: ButtonProps) {
  const {
    variant,
    intent,
    size,
    as,
    disabled,
    loading,
    iconStart,
    iconEnd,
    block,
    children,
    ref,
    className,
    ...rest
  } = props;

  const Component = asElement(as ?? "button");
  const isButton = Component === "button";
  const inactive = disabled === true || loading === true;
  const mergedClassName = className ? \`t-button \${className}\` : "t-button";

  return (
    <Component
      {...rest}
      ref={ref}
      className={mergedClassName}
      data-variant={variant}
      data-intent={intent}
      {...responsiveDataAttrs("size", size)}
      {...responsiveDataAttrs("block", block)}
      data-loading={loading === true ? "true" : undefined}
      disabled={isButton ? inactive : undefined}
      aria-disabled={!isButton && inactive ? "true" : undefined}
      aria-busy={loading === true ? "true" : undefined}
    >
      {iconStart != null ? (
        <span data-button-icon="" data-position="start">
          {iconStart}
        </span>
      ) : null}
      <span data-button-label="">{children}</span>
      {iconEnd != null ? (
        <span data-button-icon="" data-position="end">
          {iconEnd}
        </span>
      ) : null}
      {loading ? <span data-button-spinner="" aria-hidden="true" /> : null}
    </Component>
  );
}
"
`;

exports[`gen-react > renders the Cluster wrapper with multiple enum-typed props 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/cluster.yaml

import "@teseor/css/components/cluster.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type ClusterProps = Readonly<
  ClusterOwnProps & Omit<ComponentProps<"div">, keyof ClusterOwnProps>
>;

/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`tsx
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
export function Cluster(props: ClusterProps) {
  const { gap, align, justify, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-cluster \${className}\` : "t-cluster";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
      {...responsiveDataAttrs("justify", justify)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the Stack wrapper with an enum-typed prop 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/stack.yaml

import "@teseor/css/components/stack.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type StackProps = Readonly<StackOwnProps & Omit<ComponentProps<"div">, keyof StackOwnProps>>;

/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`tsx
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
export function Stack(props: StackProps) {
  const { gap, align, children, ref, className, ...rest } = props;

  const mergedClassName = className ? \`t-stack \${className}\` : "t-stack";

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the barrel 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

export { Button, type ButtonProps } from "./Button.tsx";
"
`;

exports[`gen-react > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

import { type ElementType, type Ref, useCallback, useEffect, useId, useRef, useState } from "react";

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null || v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}

/**
 * Widen a narrow tag-name union (e.g. \`"button" | "a"\`) back to
 * \`ElementType\` so the rendered \`<Component>\` does not pin JSX's ref slot to
 * the intersection of the per-tag ref types. The narrow union still types
 * the consumer-facing \`as\` prop; this only widens the local variable used in
 * JSX. No cast: the parameter type accepts the union by structural assignment.
 */
export function asElement(value: ElementType): ElementType {
  return value;
}

// ── Overlay hook — used by composite overlay components ────────────────────

export type OverlayInteraction = {
  on: { event: string; target?: string; key?: string };
  do: "open" | "close" | "toggle";
  /** Numeric ms delay. Resolved at the call site from the consumer's delay
   *  props (e.g. \`openDelay\` / \`closeDelay\`) — the wrapper passes the value,
   *  the hook just consumes it. */
  delayMs?: number;
  when?: string;
};

type OverlayConfig = {
  open?: boolean;
  defaultOpen?: boolean;
  onOpenChange?: (open: boolean) => void;
  anchorVar: string;
  popoverMode: "auto" | "manual" | "hint";
  interactions: ReadonlyArray<OverlayInteraction>;
};

type AnyEventHandler = (event: unknown) => void;

type OverlayHandlers = Record<string, AnyEventHandler>;

type OverlayReturn<T extends HTMLElement> = {
  open: boolean;
  setOpen: (next: boolean) => void;
  anchorName: string;
  anchorVar: string;
  popoverId: string;
  popoverMode: "auto" | "manual" | "hint";
  contentRef: Ref<T>;
  triggerHandlers: OverlayHandlers;
};

function sanitizeId(id: string): string {
  return id.replace(/[^a-zA-Z0-9_-]/g, "");
}

const EVENT_TO_HANDLER: Record<string, string> = {
  pointerenter: "onPointerEnter",
  pointerleave: "onPointerLeave",
  pointerdown: "onPointerDown",
  pointerup: "onPointerUp",
  click: "onClick",
  focusin: "onFocus",
  focusout: "onBlur",
  keydown: "onKeyDown",
  keyup: "onKeyUp",
};

/**
 * Drives the state machine, popover toggling, anchor binding, and event
 * wiring for overlay components (Tooltip, Popover, future Menu / Dropdown).
 * Called by generated composite wrappers; the wrapper supplies the spec's
 * interactions and popover binding declaratively.
 */
export function useOverlay<T extends HTMLElement = HTMLElement>(
  config: OverlayConfig,
): OverlayReturn<T> {
  const {
    open: openProp,
    defaultOpen = false,
    onOpenChange,
    anchorVar,
    popoverMode,
    interactions,
  } = config;

  const controlled = openProp !== undefined;
  const [internalOpen, setInternalOpen] = useState<boolean>(defaultOpen);
  const open = controlled ? Boolean(openProp) : internalOpen;
  const onOpenChangeRef = useRef(onOpenChange);
  useEffect(() => {
    onOpenChangeRef.current = onOpenChange;
  }, [onOpenChange]);

  const setOpen = useCallback(
    (next: boolean) => {
      if (!controlled) setInternalOpen(next);
      onOpenChangeRef.current?.(next);
    },
    [controlled],
  );

  const rawId = useId();
  const idCore = sanitizeId(rawId);
  const anchorName = \`--t-\${idCore}\`;
  const popoverId = \`t-overlay-\${idCore}\`;

  const contentRef = useRef<T>(null);

  const timersRef = useRef<{ open: number; close: number }>({ open: 0, close: 0 });
  const clearTimers = useCallback(() => {
    if (timersRef.current.open) window.clearTimeout(timersRef.current.open);
    if (timersRef.current.close) window.clearTimeout(timersRef.current.close);
    timersRef.current.open = 0;
    timersRef.current.close = 0;
  }, []);

  // \`openRef\` lets effect-bound handlers read the latest state without forcing
  // a re-bind cycle. The \`when:\` guard checks against it inside the handler.
  const openRef = useRef(open);
  useEffect(() => {
    openRef.current = open;
  }, [open]);

  const schedule = useCallback(
    (action: "open" | "close" | "toggle", delayMs: number) => {
      clearTimers();
      const next = action === "toggle" ? !openRef.current : action === "open";
      if (delayMs <= 0) {
        setOpen(next);
        return;
      }
      const slot: "open" | "close" = action === "close" ? "close" : "open";
      timersRef.current[slot] = window.setTimeout(() => setOpen(next), delayMs);
    },
    [clearTimers, setOpen],
  );

  // Cleanup timers on unmount.
  useEffect(() => () => clearTimers(), [clearTimers]);

  // Imperative show/hide via the Popover API. The earlier defensive check on
  // computed display was wrong — the UA stylesheet sets \`display: none\` on
  // every closed popover, so the check short-circuited every open attempt.
  // Responsive-disabled gating happens via the \`data-disabled\` attribute set
  // by the wrapper; showPopover() throws on display:none which we catch.
  useEffect(() => {
    const node = contentRef.current;
    if (!node) return;
    if (open && !node.matches(":popover-open")) {
      try {
        node.showPopover();
      } catch {
        // Popover API unsupported or display:none — degrade silently.
      }
    } else if (!open && node.matches(":popover-open")) {
      try {
        node.hidePopover();
      } catch {
        // Popover API unsupported — degrade silently.
      }
    }
  }, [open]);

  // Document/window-bound interactions. Listener mount lifecycle is tied to
  // the rules array identity; the \`when:\` guard is evaluated per fire via
  // \`openRef\` so the listener stays mounted across state transitions.
  useEffect(() => {
    const cleanups: Array<() => void> = [];
    for (const rule of interactions) {
      const target = rule.on.target;
      if (target !== "document" && target !== "window") continue;
      const sink: EventTarget = target === "document" ? document : window;
      const handler = (event: Event) => {
        if (rule.when === "open" && !openRef.current) return;
        if (rule.on.key && event instanceof KeyboardEvent && event.key !== rule.on.key) return;
        schedule(rule.do, rule.delayMs ?? 0);
      };
      sink.addEventListener(rule.on.event, handler);
      cleanups.push(() => sink.removeEventListener(rule.on.event, handler));
    }
    return () => {
      for (const fn of cleanups) fn();
    };
  }, [interactions, schedule]);

  // Trigger-bound interactions become React handlers spread onto the
  // wrapper element that the generated composite renders around \`children\`
  // (the wrapper-element pattern — no cloneElement, works in Astro slots).
  // Multiple rules on the same event merge into one composed handler.
  const triggerHandlers: OverlayHandlers = {};
  for (const rule of interactions) {
    if (rule.on.target !== "trigger") continue;
    const handlerName = EVENT_TO_HANDLER[rule.on.event];
    if (!handlerName) continue;
    const previous = triggerHandlers[handlerName];
    const delayMs = rule.delayMs ?? 0;
    const next = (e: unknown) => {
      previous?.(e);
      schedule(rule.do, delayMs);
    };
    triggerHandlers[handlerName] = next;
  }

  return {
    open,
    setOpen,
    anchorName,
    anchorVar,
    popoverId,
    popoverMode,
    contentRef,
    triggerHandlers,
  };
}
"
`;
